修改所有相关代码：truncated时仍然更新td_target，但是也作为截止条件

--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -173,7 +173,7 @@
     "        else:\n",
     "            max_next_q_values = self.target_q_net(next_states).max(1)[0].view(-1, 1) # 下个状态的最大Q值\n",
     "            # 👆 tensor.max(1)[0], (1)是指按行取最大,(0)按列; [0]是取值,[1]取序号,等于argmax\n",
-    "        q_targets = rewards + self.gamma * max_next_q_values * (1 - (dones | truncated))  # TD误差目标\n",
+    "        q_targets = rewards + self.gamma * max_next_q_values * (1 - dones)  # TD误差目标\n",
     "        dqn_loss = torch.mean(F.mse_loss(q_values, q_targets))  # 均方误差损失函数\n",
     "        self.optimizer.zero_grad()  # * 🟠 PyTorch中默认梯度会积累,比如多次求梯度会加总,这里需要显式将梯度置为0\n",
     "        dqn_loss.backward()  # 反向传播更新参数\n",
@@ -311,7 +311,7 @@
     "            state = env.reset()[0]\n",
     "            done = truncated = False\n",
     "            step = 0\n",
-    "            while (not (done | truncated)) and step < max_step:  # 执行单次游戏, 最多max_step步\n",
+    "            while not done and step < max_step:  # 执行单次游戏, 最多max_step步\n",
     "                action = agent.take_action(state)\n",
     "                next_state, reward, done, truncated, info = env.step(action)\n",
     "                replay_buffer.add(state, action, reward, next_state, done, truncated)\n",
@@ -535,7 +535,7 @@
     "            state = env.reset()[0]\n",
     "            done = truncated = False\n",
     "            step = 0\n",
-    "            while (not (done | truncated)) and step < max_step:  # 执行单次游戏, 最多max_step步\n",
+    "            while (not done) and step < max_step:  # 执行单次游戏, 最多max_step步\n",
     "                action = agent.take_action(state)\n",
     "                next_state, reward, done, truncated, info = env.step(action)\n",
     "                replay_buffer.add(state, action, reward, next_state, done, truncated)\n",
