--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -154,7 +154,7 @@
     "        else:  # DQN的情况, 直接用目标网络估计价值\n",
     "            max_next_q_values = self.target_q_net(next_states).max(1)[0].view(-1, 1)\n",
     "            \n",
-    "        q_targets = rewards + self.gamma * max_next_q_values * (1 - (dones | truncated))  # TD误差目标\n",
+    "        q_targets = rewards + self.gamma * max_next_q_values * (1 - dones)  # TD误差目标\n",
     "        dqn_loss = torch.mean(F.mse_loss(q_values, q_targets))  # 均方误差损失函数\n",
     "        self.optimizer.zero_grad()  # PyTorch中默认梯度会累积,这里需要显式将梯度置为0\n",
     "        dqn_loss.backward()  # 反向传播更新参数\n",
@@ -274,7 +274,7 @@
     "                episode_return = 0\n",
     "                state = env.reset(seed=42)[0]\n",
     "                done = truncated = False\n",
-    "                while not (done | truncated):\n",
+    "                while not done:\n",
     "                    action = agent.take_action(state)\n",
     "                    max_q_value = agent.max_q_value(state) * 0.005 + max_q_value * 0.995  # 平滑处理, 主要保留前一状态\n",
     "                    max_q_value_list.append(max_q_value)  # 保存每个状态的最大Q值\n",
