--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -121,7 +121,7 @@
     "        q1_value = self.target_critic_1(next_states, next_actions)\n",
     "        q2_value = self.target_critic_2(next_states, next_actions)\n",
     "        next_value = torch.min(q1_value, q2_value) + self.log_alpha.exp() * entropy\n",
-    "        td_target = rewards + self.gamma * next_value * (1 - dones | truncated)\n",
+    "        td_target = rewards + self.gamma * next_value * (1 - dones)\n",
     "        return td_target\n",
     "\n",
     "    def soft_update(self, net, target_net):\n",
@@ -552,7 +552,7 @@
     "        q2_value = self.target_critic_2(next_states)\n",
     "        min_qvalue = torch.sum(next_probs * torch.min(q1_value, q2_value), dim=1, keepdim=True)\n",
     "        next_value = min_qvalue + self.log_alpha.exp() * entropy\n",
-    "        td_target = rewards + self.gamma * next_value * (1 - dones | truncated)\n",
+    "        td_target = rewards + self.gamma * next_value * (1 - dones)\n",
     "        return td_target\n",
     "\n",
     "    def soft_update(self, net, target_net):\n",
