--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -193,7 +193,7 @@
     "        truncated = torch.tensor(np.array(transition_dict['truncated']), \n",
     "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        \n",
-    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
+    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones)\n",
     "        td_delta = td_target - self.critic(states)\n",
     "        advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
     "        # 所谓的另一个演员就是原来的演员的初始状态\n",
@@ -531,7 +531,7 @@
     "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        \n",
     "        rewards = (rewards + 8.0) / 8.0  # 和TRPO一样, 对奖励进行修改, 方便训练\n",
-    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
+    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones)\n",
     "        td_delta = td_target - self.critic(states)\n",
     "        advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
     "        mu, std = self.actor(states)\n",
