--- a/强化学习笔记/17_基于模型的策略优化.ipynb
+++ b/强化学习笔记/17_基于模型的策略优化.ipynb
@@ -127,7 +127,7 @@
     "        q1_value = self.target_critic_1(next_states, next_actions)\n",
     "        q2_value = self.target_critic_2(next_states, next_actions)\n",
     "        next_value = torch.min(q1_value, q2_value) + self.log_alpha.exp() * entropy\n",
-    "        td_target = rewards + self.gamma * next_value * (1 - dones | truncated)\n",
+    "        td_target = rewards + self.gamma * next_value * (1 - dones)\n",
     "        return td_target\n",
     "\n",
     "    def soft_update(self, net, target_net):\n",
