--- a/强化学习笔记/17_基于模型的策略优化.ipynb
+++ b/强化学习笔记/17_基于模型的策略优化.ipynb
@@ -87,8 +87,7 @@
     "        return self.fc2(x)\n",
     "\n",
     "\n",
-    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\n",
-    "    \"cpu\")\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "\n",
     "class SAC:\n",
@@ -436,8 +435,7 @@
     "                    model_batch_size)\n",
     "                obs = np.concatenate((env_obs, model_obs), axis=0)\n",
     "                action = np.concatenate((env_action, model_action), axis=0)\n",
-    "                next_obs = np.concatenate((env_next_obs, model_next_obs),\n",
-    "                                          axis=0)\n",
+    "                next_obs = np.concatenate((env_next_obs, model_next_obs), axis=0)\n",
     "                reward = np.concatenate((env_reward, model_reward), axis=0)\n",
     "                done = np.concatenate((env_done, model_done), axis=0)\n",
     "                truncated = np.concatenate((env_truncated, model_trunacted), axis=0)\n",
@@ -454,8 +452,7 @@
     "            self.agent.update(transition_dict)\n",
     "\n",
     "    def train_model(self):\n",
-    "        obs, action, reward, next_obs, done, truncated = self.env_pool.return_all_samples(\n",
-    "        )\n",
+    "        obs, action, reward, next_obs, done, truncated = self.env_pool.return_all_samples()\n",
     "        inputs = np.concatenate((obs, action), axis=-1)\n",
     "        reward = np.array(reward)\n",
     "        labels = np.concatenate(\n",
