更新logging记录方法

--- a/强化学习笔记/18_目标导向强化学习.ipynb
+++ b/强化学习笔记/18_目标导向强化学习.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在定义好 Actor 和 Critic 的网络结构之后，来看一下 DDPG 算法的代码。这部分代码和 13.3 节中的代码基本一致，主要区别在于 13.3 节中的 DDPG 算法是在倒立摆环境中运行的，动作只有 1 维，而这里的环境中动作有 2 维，导致一小部分代码不同。读者可以先思考一下此时应该修改哪一部分代码，然后自行对比，就能找到不同之处。"
+    "在定义好 Actor 和 Critic 的网络结构之后，来看一下 DDPG 算法的代码。这部分代码和 13.3 节中的代码基本一致，主要区别在于 13.3 节中的 DDPG 算法是在倒立摆环境中运行的，动作只有 1 维，而这里的环境中动作有 2 维，导致选择动作函数用的是detach而不是item"
    ]
   },
   {
@@ -138,7 +138,7 @@
     "\n",
     "    def take_action(self, state):\n",
     "        state = torch.tensor([state], dtype=torch.float).to(self.device)\n",
-    "        action = self.actor(state).detach().cpu().numpy()[0]  # * 动作是数组, 用.detach()分离计算图, 原本是.item(), 只适用于单个数\n",
+    "        action = self.actor(state).detach().cpu().numpy()[0]  # * 动作是数组, 用.detach()分离计算图\n",
     "        # 给动作添加噪声，增加探索\n",
     "        action = action + self.sigma * np.random.randn(self.action_dim)\n",
     "        return action\n",
