--- a/强化学习笔记/18_目标导向强化学习.ipynb
+++ b/强化学习笔记/18_目标导向强化学习.ipynb
@@ -208,7 +208,7 @@
     "        self.buffer = collections.deque(maxlen=capacity)\n",
     "\n",
     "    def add_trajectory(self, trajectory):\n",
-    "        self.buffer.append(trajectory)\n",
+    "        self.buffer.append(trajectory)  # 一次存一整个轨迹\n",
     "\n",
     "    def size(self):\n",
     "        return len(self.buffer)\n",
@@ -275,7 +275,7 @@
     "n_train = 20\n",
     "batch_size = 256\n",
     "minimal_episodes = 200\n",
-    "buffer_size = 10000\n",
+    "buffer_size = 10000  # 经验长度\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "random.seed(0)\n",
@@ -298,8 +298,8 @@
     "                action = agent.take_action(state)\n",
     "                state, reward, done = env.step(action)\n",
     "                episode_return += reward\n",
-    "                traj.store_step(action, state, reward, done)\n",
-    "            replay_buffer.add_trajectory(traj)\n",
+    "                traj.store_step(action, state, reward, done)  # 记录轨迹\n",
+    "            replay_buffer.add_trajectory(traj)  # 保存一整条轨迹\n",
     "            return_list.append(episode_return)\n",
     "            if replay_buffer.size() >= minimal_episodes:\n",
     "                for _ in range(n_train):\n",
