--- a/强化学习笔记/18_目标导向强化学习.ipynb
+++ b/强化学习笔记/18_目标导向强化学习.ipynb
@@ -220,16 +220,17 @@
     "                     rewards=[],\n",
     "                     dones=[])\n",
     "        for _ in range(batch_size):\n",
-    "            traj = random.sample(self.buffer, 1)[0]\n",
-    "            step_state = np.random.randint(traj.length)\n",
+    "            traj = random.sample(self.buffer, 1)[0]  # 随机从self.buffer中抽1个轨迹并取出值\n",
+    "            step_state = np.random.randint(traj.length)  # 从轨迹中取某个时点\n",
     "            state = traj.states[step_state]\n",
     "            next_state = traj.states[step_state + 1]\n",
     "            action = traj.actions[step_state]\n",
     "            reward = traj.rewards[step_state]\n",
     "            done = traj.dones[step_state]\n",
-    "\n",
+    "            \n",
+    "            # 如果使用HER，在0.8的概率下执行\n",
     "            if use_her and np.random.uniform() <= her_ratio:\n",
-    "                step_goal = np.random.randint(step_state + 1, traj.length + 1)\n",
+    "                step_goal = np.random.randint(step_state + 1, traj.length + 1)  # ! 没懂，建议调试\n",
     "                goal = traj.states[step_goal][:2]  # 使用HER算法的future方案设置目标\n",
     "                dis = np.sqrt(np.sum(np.square(next_state[:2] - goal)))\n",
     "                reward = -1.0 if dis > dis_threshold else 0\n",
@@ -300,17 +301,15 @@
     "                episode_return += reward\n",
     "                traj.store_step(action, state, reward, done)  # 记录轨迹\n",
     "            replay_buffer.add_trajectory(traj)  # 保存一整条轨迹\n",
-    "            return_list.append(episode_return)\n",
+    "            return_list.append(episode_return)  # 记录episode奖励\n",
     "            if replay_buffer.size() >= minimal_episodes:\n",
-    "                for _ in range(n_train):\n",
+    "                for _ in range(n_train):  # 更新n次（20次）\n",
     "                    transition_dict = replay_buffer.sample(batch_size, True)\n",
     "                    agent.update(transition_dict)\n",
     "            if (i_episode + 1) % 10 == 0:\n",
     "                pbar.set_postfix({\n",
-    "                    'episode':\n",
-    "                    '%d' % (num_episodes / 10 * i + i_episode + 1),\n",
-    "                    'return':\n",
-    "                    '%.3f' % np.mean(return_list[-10:])\n",
+    "                    'episode': '%d' % (num_episodes / 10 * i + i_episode + 1),\n",
+    "                    'return': '%.3f' % np.mean(return_list[-10:])\n",
     "                })\n",
     "            pbar.update(1)\n",
     "\n",
