重要修改，参考18_目标导向强化学习中最后一段说明

--- a/强化学习笔记/09_策略梯度.ipynb
+++ b/强化学习笔记/09_策略梯度.ipynb
@@ -69,8 +69,8 @@
     "        self.gamma = gamma  # 折扣因子\n",
     "        self.device = device\n",
     "    def take_action(self, state):  # 根据动作概率分布随机采样\n",
-    "        state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
-    "        probs = self.policy_net(state.unsqueeze(0))  # 给state加一个维度\n",
+    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
+    "        probs = self.policy_net(state)  # 给state加一个维度\n",
     "        action_dist = torch.distributions.Categorical(probs)  # 根据probs给出的概率创建一个类别分布\n",
     "        action = action_dist.sample()  # 从创建的类别分布中抽样, 得到某个类别的序号\n",
     "        return action.item()\n",
