--- a/强化学习笔记/10_Actor-Critic.ipynb
+++ b/强化学习笔记/10_Actor-Critic.ipynb
@@ -104,8 +104,8 @@
     "        self.device = device\n",
     "\n",
     "    def take_action(self, state):\n",
-    "        state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
-    "        probs = self.actor(state.unsqueeze(0))\n",
+    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
+    "        probs = self.actor(state)\n",
     "        action_dist = torch.distributions.Categorical(probs)  # 根据给定概率创建一个分类的分布\n",
     "        action = action_dist.sample()  # 从分布中采样一个类别，这里是动作\n",
     "        return action.item()  # 取到的动作序号是tensor, 转成普通python数字\n",
@@ -369,7 +369,7 @@
     "        self.device = device\n",
     "\n",
     "    def take_action(self, state):\n",
-    "        state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
+    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
     "        mu, std = self.actor(state)\n",
     "        action_dist = torch.distributions.Normal(mu, std)  # 根据给定概率创建一个分类的分布\n",
     "        action = action_dist.sample()  # 从分布中采样一个类别，这里是动作\n",
