--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -107,7 +107,7 @@
     "        self.device = device\n",
     "\n",
     "    def take_action(self, state):\n",
-    "        state = torch.tensor(np.array(state), dtype=torch.float).to(self.device)\n",
+    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
     "        action = self.actor(state).item()  # * 在这里和网络分离了, 因此后面不需要.item()\n",
     "        if self.training:\n",
     "            # 给动作添加噪声，增加探索, 但是验证和测试时不需要\n",
