--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -107,7 +107,7 @@
     "        self.device = device\n",
     "\n",
     "        self.action_scale = torch.tensor((self.action_space.high - self.action_space.low) / 2,\n",
-    "                                         device=self.device, dtype=torch.float32).unsqueeze(dim=0)\n",
+    "                                         device=self.device, dtype=torch.float32).unsqueeze(0)\n",
     "        # * 技巧1: 给了两个critic Q函数, 给出较小Q值的会纳入Q_target计算\n",
     "        self.actor = PolicyNet(state_dim, hidden_dim, action_dim, self.action_space.high[0]).to(device)\n",
     "        self.critic_1 = QValueNet(state_dim, hidden_dim, action_dim).to(device)\n",
@@ -135,7 +135,7 @@
     "\n",
     "    def take_action(self, state) -> list:\n",
     "        self.sample_count += 1\n",
-    "        state = torch.tensor(state, dtype=torch.float).to(self.device)\n",
+    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
     "        action = self.actor(state).item()\n",
     "        if self.training:\n",
     "            # 给动作添加噪声, 增加探索, 加上裁剪\n",
