--- a/强化学习笔记/14_SAC.ipynb
+++ b/强化学习笔记/14_SAC.ipynb
@@ -111,7 +111,7 @@
     "        self.device = device\n",
     "\n",
     "    def take_action(self, state) -> (int | list[float]):\n",
-    "        state = torch.tensor(np.array(state), dtype=torch.float).to(self.device)\n",
+    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
     "        action = [self.actor(state)[0].item()]\n",
     "        return action\n",
     "\n",
@@ -527,7 +527,7 @@
     "        self.device = device\n",
     "\n",
     "    def take_action(self, state):\n",
-    "        state = torch.tensor([state], dtype=torch.float).to(self.device)\n",
+    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(self.device)\n",
     "        probs = self.actor(state)\n",
     "        action_dist = torch.distributions.Categorical(probs)\n",
     "        action = action_dist.sample()\n",
