--- a/强化学习笔记/15_模仿学习.ipynb
+++ b/强化学习笔记/15_模仿学习.ipynb
@@ -265,7 +265,7 @@
     "        self.optimizer.step()\n",
     "\n",
     "    def take_action(self, state):\n",
-    "        state = torch.tensor(np.array(state), dtype=torch.float).to(device)\n",
+    "        state = torch.tensor(state[np.newaxis, :], dtype=torch.float).to(device)\n",
     "        probs = self.policy(state)\n",
     "        action_dist = torch.distributions.Categorical(probs)\n",
     "        action = action_dist.sample()\n",
