--- a/强化学习笔记/18_目标导向强化学习.ipynb
+++ b/强化学习笔记/18_目标导向强化学习.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "GoRL 目标导向强化学习\n",
     "\n",
-    "* HER(hindsight experience replay)算法，事后经验回放"
+    "* HER(hindsight experience replay)算法，事后经验回放\n",
+    "\n",
+    "* 仅适用于异策略，因为主要改进在经验采样部分"
    ]
   },
   {
@@ -44,7 +46,7 @@
     "        self.action_bound = 1\n",
     "\n",
     "    def reset(self):  # 重置环境\n",
-    "        # 初始状态随机生成一个目标状态, 坐标范围是[3.5～4.5, 3.5～4.5]\n",
+    "        # 初始状态随机生成一个真目标状态, 从[3.5～4.5, 3.5～4.5]中随机取\n",
     "        self.goal = np.array([4 + random.uniform(-0.5, 0.5), 4 + random.uniform(-0.5, 0.5)])\n",
     "        self.state = np.array([0, 0])  # 初始状态\n",
     "        self.count = 0\n",
@@ -60,7 +62,7 @@
     "        self.state = np.array([x, y])\n",
     "        self.count += 1\n",
     "\n",
-    "        dis = np.sqrt(np.sum(np.square(self.state - self.goal)))\n",
+    "        dis = np.sqrt(np.sum(np.square(self.state - self.goal)))  # 和真目标的距离\n",
     "        reward = -1.0 if dis > self.distance_threshold else 0\n",
     "        if dis <= self.distance_threshold or self.count == 50:  # 最多50步\n",
     "            done = True\n",
@@ -230,16 +232,16 @@
     "            \n",
     "            # 如果使用HER，在0.8的概率下执行\n",
     "            if use_her and np.random.uniform() <= her_ratio:\n",
-    "                # 从step_state + 1, traj.length + 1中均匀取一个数, 作为新的目标的索引\n",
+    "                # 从step_state + 1, traj.length + 1中均匀取一个数, 作为新的目标的索引, 注意与环境内的真实目标区分\n",
     "                step_goal = np.random.randint(step_state + 1, traj.length + 1)\n",
     "                # 使用HER算法的future方案, 在当前轨迹随机取一个点, 设置目标状态, 状态前两个值是坐标值\n",
     "                goal = traj.states[step_goal][:2]\n",
     "                dis = np.sqrt(np.sum(np.square(next_state[:2] - goal)))  # 计算下一个状态位置和目标值的距离\n",
-    "                reward = -1.0 if dis > dis_threshold else 0\n",
-    "                done = False if dis > dis_threshold else True\n",
-    "                state = np.hstack((state[:2], goal))\n",
-    "                next_state = np.hstack((next_state[:2], goal))\n",
-    "\n",
+    "                reward = -1.0 if dis > dis_threshold else 0  # 如果下一状态离目标比较近, 不惩罚\n",
+    "                done = False if dis > dis_threshold else True  # 如果下一状态离目标比较近, 结束\n",
+    "                state = np.hstack((state[:2], goal))  # 更新state中的goal\n",
+    "                next_state = np.hstack((next_state[:2], goal))  # 更新next_state中的goal\n",
+    "                \n",
     "            batch['states'].append(state)\n",
     "            batch['next_states'].append(next_state)\n",
     "            batch['actions'].append(action)\n",
