重新研究本学习资料中主要环境倒立摆后，决定把truncated重新加回是否训练的判断标准中

--- a/强化学习笔记/10_Actor-Critic.ipynb
+++ b/强化学习笔记/10_Actor-Critic.ipynb
@@ -125,7 +125,7 @@
     "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
     "        # 时序差分目标\n",
-    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones)\n",
+    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
     "        td_delta = td_target - self.critic(states)  # 时序差分误差, 实际上就是优势函数A\n",
     "        log_probs = torch.log(self.actor(states).gather(1, actions))\n",
     "        # 评论员/价值网络均方误差损失函数, td_target仅作为标量\n",
@@ -390,7 +390,7 @@
     "                                 dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
     "        # 时序差分目标\n",
-    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones)\n",
+    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
     "        td_delta = td_target - self.critic(states)  # 时序差分误差\n",
     "        mu, std = self.actor(states)\n",
     "        action_dists = torch.distributions.Normal(mu, std)\n",
