--- a/强化学习笔记/13_TD3.ipynb
+++ b/强化学习笔记/13_TD3.ipynb
@@ -178,7 +178,7 @@
     "        target_q2 = self.target_critic_2(next_states, next_action).detach()\n",
     "        # 取两个网络较小值\n",
     "        next_q_values = torch.min(target_q1, target_q2)\n",
-    "        q_targets = rewards + self.gamma * next_q_values * (1 - dones)\n",
+    "        q_targets = rewards + self.gamma * next_q_values * (1 - dones | truncated)\n",
     "\n",
     "        # 两个评论员梯度下降\n",
     "        critic_loss_1 = torch.mean(F.mse_loss(self.critic_1(states, actions), q_targets))\n",
