--- a/强化学习笔记/18_目标导向强化学习.ipynb
+++ b/强化学习笔记/18_目标导向强化学习.ipynb
@@ -20,9 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 如何理解HER算法\n",
+    "\n",
     "接下来看看如何实现 HER 算法。首先定义一个简单二维平面上的环境。在一个二维网格世界上，每个维度的位置范围是[0,5]，在每一个序列的初始，智能体都处于[0,0]的位置，环境将自动从3.5<=x, y<=4.5的矩形区域内生成一个目标。每个时刻智能体可以选择纵向和横向分别移动[-1,1]作为这一时刻的动作。当智能体距离目标足够近的时候，它将收到奖励并结束任务，否则奖励为-1。每一条序列的最大长度为 50。\n",
     "\n",
-    "![image.png](attachment:image.png)"
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    "个人理解是，经验池改成储存轨迹，在轨迹上采样，并且有比较大的概率把负奖励改成0，或者把0改成正奖励，从而提高经验利用效率"
    ]
   },
   {
@@ -46,7 +50,7 @@
     "        self.action_bound = 1\n",
     "\n",
     "    def reset(self):  # 重置环境\n",
-    "        # 初始状态随机生成一个真目标状态, 从[3.5～4.5, 3.5～4.5]中随机取\n",
+    "        # 初始状态随机生成一个真目标状态, 从[3.5 ~ 4.5, 3.5 ~ 4.5]中随机取\n",
     "        self.goal = np.array([4 + random.uniform(-0.5, 0.5), 4 + random.uniform(-0.5, 0.5)])\n",
     "        self.state = np.array([0, 0])  # 初始状态\n",
     "        self.count = 0\n",
@@ -108,6 +112,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# DDPG\n",
+    "\n",
     "在定义好 Actor 和 Critic 的网络结构之后，来看一下 DDPG 算法的代码。之前的 DDPG 算法是在倒立摆环境中运行的，动作只有 1 维，而这里的环境中动作有 2 维，导致选择动作函数用的是detach分离action出计算图，而不是item"
    ]
   },
@@ -157,7 +163,7 @@
     "        dones = torch.tensor(transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "\n",
     "        next_q_values = self.target_critic(next_states, self.target_actor(next_states))\n",
-    "        q_targets = rewards + self.gamma * next_q_values * (1 - dones)\n",
+    "        q_targets = rewards + self.gamma * next_q_values * (1 - dones | truncated)\n",
     "        # MSE损失函数\n",
     "        critic_loss = torch.mean(F.mse_loss(self.critic(states, actions), q_targets))\n",
     "        self.critic_optimizer.zero_grad()\n",
@@ -178,6 +184,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 轨迹经验池\n",
+    "\n",
     "接下来定义一个特殊的经验回放池，此时回放池内不再存储每一步的数据，而是存储一整条轨迹。这是 HER 算法中的核心部分，之后可以用 HER 算法从该经验回放池中构建新的数据来帮助策略训练。"
    ]
   },
