--- a/强化学习笔记/15_模仿学习.ipynb
+++ b/强化学习笔记/15_模仿学习.ipynb
@@ -106,7 +106,7 @@
     "        next_states = torch.tensor(transition_dict['next_states'], dtype=torch.float).to(self.device)\n",
     "        dones = torch.tensor(transition_dict['dones'], dtype=torch.int).view(-1, 1).to(self.device)\n",
     "        truncated = torch.tensor(transition_dict['truncated'], dtype=torch.int).view(-1, 1).to(self.device)\n",
-    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones)\n",
+    "        td_target = rewards + self.gamma * self.critic(next_states) * (1 - dones | truncated)\n",
     "        td_delta = td_target - self.critic(states)\n",
     "        advantage = rl_utils.compute_advantage(self.gamma, self.lmbda, td_delta.cpu()).to(self.device)\n",
     "        old_log_probs = torch.log(self.actor(states).gather(1, actions)).detach()\n",
