--- a/强化学习笔记/19_多智能体.ipynb
+++ b/强化学习笔记/19_多智能体.ipynb
@@ -24,8 +24,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ❗注意\n",
+    "\n",
+    "未配置环境，本节代码无法运行"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,21 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 关于环境\n",
-    "\n",
-    "MPE包仍在维护，[参考链接](https://pettingzoo.farama.org/environments/mpe/simple_adversary/#pettingzoo.mpe.simple_adversary.simple_adversary.raw_env.infos)，故按照官方写法而非书本写法。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pettingzoo.mpe import simple_adversary_v3\n",
-    "\n",
-    "env = simple_adversary_v3.parallel_env(render_mode=\"human\")\n",
-    "obs, info = env.reset(seed=42)"
+    "## 环境"
    ]
   },
   {
@@ -67,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +200,7 @@
     "    def take_action(self, states, explore):\n",
     "        states = [\n",
     "            torch.tensor([states[i]], dtype=torch.float, device=self.device)\n",
-    "            for i in range(len(env.agents))\n",
+    "            for i in env.agents\n",
     "        ]\n",
     "        return [\n",
     "            agent.take_action(state, explore)\n",
@@ -260,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,6 +263,16 @@
      "output_type": "stream",
      "text": [
       "cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\conversions.py:158: UserWarning: The `action_spaces` dictionary is deprecated. Use the `action_space` function instead.\n",
+      "  warnings.warn(\n",
+      "e:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\conversions.py:144: UserWarning: The `observation_spaces` dictionary is deprecated. Use the `observation_space` function instead.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -310,9 +315,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Bowen\\AppData\\Local\\Temp\\ipykernel_15204\\3717953814.py:24: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\torch\\csrc\\utils\\tensor_new.cpp:248.)\n",
+      "  torch.tensor([states[i]], dtype=torch.float, device=self.device)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for %: 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\机器学习实战\\强化学习笔记\\19_多智能体.ipynb 单元格 15\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m actions \u001b[39m=\u001b[39m maddpg\u001b[39m.\u001b[39mtake_action(state, explore\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m actions \u001b[39m=\u001b[39m {\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     i: [j]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m env\u001b[39m.\u001b[39magents\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m actions\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m }\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m next_state, reward, done, truncated, _ \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(actions)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m replay_buffer\u001b[39m.\u001b[39madd(state, actions, reward, next_state, done, truncated)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98/%E5%BC%BA%E5%8C%96%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/19_%E5%A4%9A%E6%99%BA%E8%83%BD%E4%BD%93.ipynb#X21sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m state \u001b[39m=\u001b[39m next_state\n",
+      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\conversions.py:207\u001b[0m, in \u001b[0;36maec_to_parallel_wrapper.step\u001b[1;34m(self, actions)\u001b[0m\n\u001b[0;32m    203\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\n\u001b[0;32m    204\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mexpected agent \u001b[39m\u001b[39m{\u001b[39;00magent\u001b[39m}\u001b[39;00m\u001b[39m got agent \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39maec_env\u001b[39m.\u001b[39magent_selection\u001b[39m}\u001b[39;00m\u001b[39m, Parallel environment wrapper expects agents to step in a cycle.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    205\u001b[0m         )\n\u001b[0;32m    206\u001b[0m obs, rew, termination, truncation, info \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maec_env\u001b[39m.\u001b[39mlast()\n\u001b[1;32m--> 207\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49maec_env\u001b[39m.\u001b[39;49mstep(actions[agent])\n\u001b[0;32m    208\u001b[0m \u001b[39mfor\u001b[39;00m agent \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maec_env\u001b[39m.\u001b[39magents:\n\u001b[0;32m    209\u001b[0m     rewards[agent] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maec_env\u001b[39m.\u001b[39mrewards[agent]\n",
+      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\wrappers\\order_enforcing.py:91\u001b[0m, in \u001b[0;36mOrderEnforcingWrapper.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     89\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     90\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_updated \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> 91\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(action)\n",
+      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\wrappers\\base.py:116\u001b[0m, in \u001b[0;36mBaseWrapper.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, action: ActionType) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 116\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n\u001b[0;32m    118\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent_selection \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39magent_selection\n\u001b[0;32m    119\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrewards \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mrewards\n",
+      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\wrappers\\assert_out_of_bounds.py:26\u001b[0m, in \u001b[0;36mAssertOutOfBoundsWrapper.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39maction_space(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent_selection)\u001b[39m.\u001b[39mn)\n\u001b[0;32m     18\u001b[0m \u001b[39massert\u001b[39;00m (\n\u001b[0;32m     19\u001b[0m     action \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     20\u001b[0m     \u001b[39mand\u001b[39;00m (\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     24\u001b[0m ) \u001b[39mor\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39maction_space(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent_selection)\u001b[39m.\u001b[39mn \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(action)\n\u001b[0;32m     25\u001b[0m       ), \u001b[39m\"\u001b[39m\u001b[39maction is not in action space\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> 26\u001b[0m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mstep(action)\n",
+      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\utils\\wrappers\\base.py:116\u001b[0m, in \u001b[0;36mBaseWrapper.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, action: ActionType) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 116\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n\u001b[0;32m    118\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39magent_selection \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39magent_selection\n\u001b[0;32m    119\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrewards \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mrewards\n",
+      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\mpe\\_mpe_utils\\simple_env.py:251\u001b[0m, in \u001b[0;36mSimpleEnv.step\u001b[1;34m(self, action)\u001b[0m\n\u001b[0;32m    248\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcurrent_actions[current_idx] \u001b[39m=\u001b[39m action\n\u001b[0;32m    250\u001b[0m \u001b[39mif\u001b[39;00m next_idx \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m--> 251\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_execute_world_step()\n\u001b[0;32m    252\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msteps \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    253\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msteps \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_cycles:\n",
+      "File \u001b[1;32me:\\anaconda3\\lib\\site-packages\\pettingzoo\\mpe\\_mpe_utils\\simple_env.py:174\u001b[0m, in \u001b[0;36mSimpleEnv._execute_world_step\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    172\u001b[0m         action \u001b[39m=\u001b[39m action[mdim:]\n\u001b[0;32m    173\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 174\u001b[0m         scenario_action\u001b[39m.\u001b[39mappend(action \u001b[39m%\u001b[39;49m mdim)\n\u001b[0;32m    175\u001b[0m         action \u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m=\u001b[39m mdim\n\u001b[0;32m    176\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m agent\u001b[39m.\u001b[39msilent:\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for %: 'list' and 'int'"
+     ]
+    }
+   ],
    "source": [
     "def evaluate(maddpg, n_episode=10, episode_length=25):\n",
     "    # 对学习的策略进行评估,此时不会进行探索\n",
@@ -322,7 +369,7 @@
     "        obs, info = env.reset()\n",
     "        for t_i in range(episode_length):\n",
     "            actions = maddpg.take_action(obs, explore=False)\n",
-    "            obs, rew, done, info = env.step(actions)\n",
+    "            obs, rew, done, truncated, info = env.step(actions)\n",
     "            rew = np.array(rew)\n",
     "            returns += rew / n_episode\n",
     "    return returns.tolist()\n",
@@ -331,12 +378,17 @@
     "return_list = []  # 记录每一轮的回报（return）\n",
     "total_step = 0\n",
     "for i_episode in range(num_episodes):\n",
-    "    state = env.reset()\n",
+    "    state, info = env.reset()\n",
     "    # ep_returns = np.zeros(len(env.agents))\n",
     "    for e_i in range(episode_length):\n",
     "        actions = maddpg.take_action(state, explore=True)\n",
-    "        next_state, reward, done, _ = env.step(actions)\n",
-    "        replay_buffer.add(state, actions, reward, next_state, done)\n",
+    "        actions = {\n",
+    "            i: [j]\n",
+    "            for i in env.agents\n",
+    "            for j in actions\n",
+    "        }\n",
+    "        next_state, reward, done, truncated, _ = env.step(actions)\n",
+    "        replay_buffer.add(state, actions, reward, next_state, done, truncated)\n",
     "        state = next_state\n",
     "\n",
     "        total_step += 1\n",
@@ -360,6 +412,22 @@
     "        return_list.append(ep_returns)\n",
     "        print(f\"Episode: {i_episode+1}, {ep_returns}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -378,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
